# formsbot

./: .dockerignore  Cargo.toml  Dockerfile  LICENSE  README.md  compose.yaml
.github/workflows/: docker-image.yml
src/: commands.rs  errors.rs  event_handler.rs  main.rs  responses.rs  state.rs  utils.rs
src/commands/: autocomplete.rs  cooldowns.rs  fields.rs  forms.rs  mod.rs
