[package]
name = "discordbot"
version = "0.1.0"
edition = "2021"

[dependencies]
poise = "0.6.1"
redis = { version = "0.26.0", features = ["tokio-comp", "connection-manager"] }
serde_json = "1.0.120"
serenity = "0.12.2"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
serde = "1.0.204"
env_logger = "0.11.5"
uuid = "1.10.0"
